# ParallelsBazhanov

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Aziza/: Aziza_main.cpp  CMakeLists.txt
metallic_structures/: CMakeLists.txt  atom.h  geometry.cpp  geometry.h  quantities.cpp  quantities.h  structure.cpp  structure.h
optimization/: CMakeLists.txt  CoCu.txt  losses.cpp  nelder_mead.cpp  optimization_methods.h  sim_anealing.cpp  tb_sma_optimization.cpp
tb_sma/: CMakeLists.txt  atom.h  geometry.h  parameters.cpp  parameters.h  quantities.cpp  quantities.h  structure.cpp  structure.h  tb_sma.cpp  tb_sma.h
test/: CMakeLists.txt  alloy_quantities.ut.cpp  energy.ut.cpp  inv_task.ut.cpp  material_quantities.ut.cpp  quantities.ut.cpp  structure.ut.cpp  test_all.cpp
test/test_runner/: CMakeLists.txt  my_print.h  test_runner.cpp  test_runner.h
